[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "amulety"
version = "2.1.2"
description = "Python package to create embeddings of BCR amino acid sequences."
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.8, <4"
license = {text = "MIT"}
keywords = [
    "immcantation",
    "immunoinformatics",
    "bioinformatics",
    "embedding",
    "antibody",
    "BCR",
    "Machine Learning",
    "biology",
    "NGS",
    "next generation sequencing"
]
authors = [
    {name = "Mamie Wang", email = "mamie.wang@yale.edu"},
    {name = "Wengyao Jiang", email = "wengyao.jiang@yale.edu"},
    {name = "Steven Kleinstein", email = "steven.kleinstein@yale.edu"},
    {name = "Gisela Gabernet", email = "gisela.gabernet@yale.edu"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "numpy",
    "pandas",
    "torch",
    "torchvision",
    "transformers<4.52", #Antiberty fails on transformers 4.52+ due to a breaking change in the API
    "typer",
    "antiberty",
    # ablang depends on numba which currently supports Python <3.14.
    # Use an environment marker so installation on 3.14+ skips ablang instead of failing.
    "ablang; python_version < '3.14'",
    "rjieba",
    "sentencepiece",
    "anndata"
]

[project.urls]
Homepage = "https://github.com/immcantation/amulety"
Repository = "https://github.com/immcantation/amulety"
Issues = "https://github.com/immcantation/amulety/issues"

[project.scripts]
amulety = "amulety.amulety:main"

[tool.setuptools]
packages = ["amulety"]

[tool.pytest.ini_options]
markers = ["datafiles: load datafiles"]
testpaths = ["tests"]
norecursedirs = [
    ".*",
    "build",
    "dist",
    "*.egg",
    "data",
    "__pycache__",
    ".github",
    "src",
    "docs",
]
python_files = ["test_*.py"]

[tool.mypy.overrides]
warn_unused_configs = true
ignore_missing_imports = true

[tool.ruff]
line-length = 120
target-version = "py38"
cache-dir = "~/.cache/ruff"

[tool.ruff.lint]
select = ["I", "E1", "E4", "E7", "E9", "F", "UP", "N"]

[tool.ruff.lint.isort]
known-first-party = ["amulety"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402", "F401"]
"tests/*" = ["N802"]
"amulety.py" = ["N806"]

[tool.ruff.lint.pep8-naming]
extend-ignore-names = ["mocked_*", "*allOf", "*URI*"]
